Added a orange trivident theme

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-static-top m-b-0">
   <div class="navbar-header">
       <div class="top-left-part">
-        <a class="navbar-brand" href="#">G4TM</a>
+        <strong><a class="navbar-brand" href="#">G4TM</a></strong>
       </div>
       <div class="container-fluid">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -11,7 +11,7 @@
         <span class="icon-bar"></span>
         </button>
 
-       <env-select-nav></env-select-nav>     
+       <env-select-nav></env-select-nav>
       </div>
   </div>
 </nav>
