--- a/client/src/scss-base/_sidebar.scss
+++ b/client/src/scss-base/_sidebar.scss
@@ -15,7 +15,7 @@
       border-left: 3px solid #fff;
       &.active {
         color: #54667a;
-        border-color: #41b3f9;
+        border-color: $orange;
         font-weight: 500;
       }
     }
