--- a/client/src/app/webapplication/webapplication-overview.component.html
+++ b/client/src/app/webapplication/webapplication-overview.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-12">
-    <h1>{{title}}</h1>
+    <h1 class="mb-3">{{title}}</h1>
 
-    <button type="button" class="btn btn-success pull-right" (click)="webappedit.show()">Add</button>
+    <button type="button" class="btn btn-outline btn-orange pull-right" (click)="webappedit.show()">Add</button>
     <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection"></search>
 
     <webapplication-edit #webappedit></webapplication-edit>
