--- a/client/src/app/website/website-overview.component.html
+++ b/client/src/app/website/website-overview.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-md-12">
-    <h1>{{title}}</h1>
+    <h1 class="mb-3">{{title}}</h1>
 
-    <button type="button" class="btn btn-success pull-right" (click)="websiteEdit.show()">Add</button>
+    <button type="button" class="btn btn-outline btn-orange pull-right" (click)="websiteEdit.show()">Add</button>
     <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection"></search>
 
     <website-edit #websiteEdit> </website-edit>
-    <div class="list-group">
+    <div class="row">
       <website-promobox *ngFor="let item of ViewCollection" [Model]="item"></website-promobox>
     </div>
   </div>
