--- a/client/src/scss-base/_base.scss
+++ b/client/src/scss-base/_base.scss
@@ -1,6 +1,7 @@
 $font-stack: "Helvetica Neue",Helvetica,Arial,sans-serif;
-$primary-color: #333;
-
+$primary-color: rgb(117, 107, 102)
+;
+$orange: #ff5d00;
 $background-color: #484f45;
 
 $linkColor: #3df;
