Changed the search button and the panel in the topology type

--- a/client/src/app/shared/search/search.component.html
+++ b/client/src/app/shared/search/search.component.html
@@ -1,6 +1,6 @@
-<button type="button" class="btn btn-primary"
+<button type="button" class="btn btn-outline btn-orange"
         (click)="isCollapsed = !isCollapsed">
-<i class="icon-search"></i> {{title}}
+<span class="glyphicon glyphicon-search"></span> {{title}}
 </button>
 <hr/>
 <div (collapsed)="collapsed($event)"
