--- a/client/src/app/topologytype/topologytype-promobox.component.html
+++ b/client/src/app/topologytype/topologytype-promobox.component.html
@@ -14,7 +14,7 @@
         <dt>Name</dt>
         <dd>{{model.Name}}</dd>
       </dl>
-      <div class="panel panel-success">
+      <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">Environment Purposes</h3>
         </div>
