update favicon & create v1.0 release

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-static-top m-b-0">
   <div class="navbar-header">
       <div class="top-left-part">
-        <strong><a class="navbar-brand" href="#"><span class="glyphicon glyphicon-leaf"></span> G4TM</a></strong>
+        <strong><a class="navbar-brand" href="#"><span class="glyphicon glyphicon-globe"></span> G4TM</a></strong>
       </div>
       <div class="container-fluid">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
